Fix for mobile menu alignment

--- a/style.css
+++ b/style.css
@@ -1047,7 +1047,7 @@ mobile menu css
 
 .slicknav_nav {
   background: #20213a;
-  width: 90vw;
+  width: 82vw;
   text-align: center;
   position: absolute;
   left: auto;
